Fix multiple eventRow scrolls at one time causing misalignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,6 +28,8 @@
   --color-secondary-800: #a89898;
   --color-secondary-900: #8a7878;
 
+  --color-oak: #decaab;
+
   --font-sans: "Raleway", "Arial", sans-serif;
 
   --container-sm: 480px;
